# Chess-Game-AI

./: CMakeLists.txt  Makefile  README.md  resources.qrc  whatdo.txt
src/: chess_AI.c  chess_board.c  chess_board.h  chess_checks.c  chess_main.c  chess_move.c  chess_struct.c  chess_struct.h
src/gui/: main.cpp
src/og_files/: chess_AI.c  chess_AI.h  chess_board.c  chess_board.h  chess_checks.h  chess_main.c  chess_move.h  chess_struct.c  chess_struct.h
